; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_ar7240.c_ag71xx_ar7240_cleanup.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ar71xx/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_ar7240.c_ag71xx_ar7240_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ag71xx = type { %struct.ar7240sw* }
%struct.ar7240sw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ag71xx_ar7240_cleanup(%struct.ag71xx* %0) #0 {
  %2 = alloca %struct.ag71xx*, align 8
  %3 = alloca %struct.ar7240sw*, align 8
  store %struct.ag71xx* %0, %struct.ag71xx** %2, align 8
  %4 = load %struct.ag71xx*, %struct.ag71xx** %2, align 8
  %5 = getelementptr inbounds %struct.ag71xx, %struct.ag71xx* %4, i32 0, i32 0
  %6 = load %struct.ar7240sw*, %struct.ar7240sw** %5, align 8
  store %struct.ar7240sw* %6, %struct.ar7240sw** %3, align 8
  %7 = load %struct.ar7240sw*, %struct.ar7240sw** %3, align 8
  %8 = icmp ne %struct.ar7240sw* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.ar7240sw*, %struct.ar7240sw** %3, align 8
  %12 = getelementptr inbounds %struct.ar7240sw, %struct.ar7240sw* %11, i32 0, i32 0
  %13 = call i32 @unregister_switch(i32* %12)
  %14 = load %struct.ar7240sw*, %struct.ar7240sw** %3, align 8
  %15 = call i32 @kfree(%struct.ar7240sw* %14)
  %16 = load %struct.ag71xx*, %struct.ag71xx** %2, align 8
  %17 = getelementptr inbounds %struct.ag71xx, %struct.ag71xx* %16, i32 0, i32 0
  store %struct.ar7240sw* null, %struct.ar7240sw** %17, align 8
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @unregister_switch(i32*) #1

declare dso_local i32 @kfree(%struct.ar7240sw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
